{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 190,
  "lineage": "97d22f0e-13e3-8442-4149-73a607208ce8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "albcricket",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052cef05d01020f1d",
            "arn": "arn:aws:ec2:ap-south-1:076592739138:instance/i-07cfd8661f1101d1d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cfd8661f1101d1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ntr",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e050a740b91495b",
            "private_dns": "ip-172-31-12-31.ap-south-1.compute.internal",
            "private_ip": "172.31.12.31",
            "public_dns": "ec2-15-206-148-58.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.148.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0454f852a50688239",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec24_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eeb71379aba773ee",
            "tags": {
              "Name": "albcricket"
            },
            "tags_all": {
              "Name": "albcricket"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff0bc387ddec9631"
            ]
          },
          "dependencies": [
            "aws_security_group.al-sg",
            "aws_security_group.ec24_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "albfootball",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052cef05d01020f1d",
            "arn": "arn:aws:ec2:ap-south-1:076592739138:instance/i-053c0dc5494b34cb4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053c0dc5494b34cb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ntr",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a2cc9e3368abe26",
            "private_dns": "ip-172-31-46-75.ap-south-1.compute.internal",
            "private_ip": "172.31.46.75",
            "public_dns": "ec2-15-206-66-131.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.66.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06770b14eb456dfa7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec24_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063495464902ee319",
            "tags": {
              "Name": "albfootball"
            },
            "tags_all": {
              "Name": "albfootball"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff0bc387ddec9631"
            ]
          },
          "dependencies": [
            "aws_security_group.al-sg",
            "aws_security_group.ec24_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:loadbalancer/app/alb-1/b9f1f855d1bedc65",
            "arn_suffix": "app/alb-1/b9f1f855d1bedc65",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1-75671323.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:loadbalancer/app/alb-1/b9f1f855d1bedc65",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-1",
            "security_groups": [
              "sg-0d98626b463e978f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c74f81f64b7be6a"
              },
              {
                "subnet_id": "subnet-063495464902ee319"
              }
            ],
            "subnets": [
              "subnet-03c74f81f64b7be6a",
              "subnet-063495464902ee319"
            ],
            "tags": {
              "Name": "alb-1"
            },
            "tags_all": {
              "Name": "alb-1"
            },
            "vpc_id": "vpc-015e7f08cb53238e7",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.al-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "l-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg1/3708884b2781d100",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:loadbalancer/app/alb-1/b9f1f855d1bedc65",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-1",
            "aws_lb_target_group.alb-tg1",
            "aws_security_group.al-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg1/3708884b2781d100",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener-rule/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3/4debcd909c6c54cc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cricket/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener-rule/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3/4debcd909c6c54cc",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-1",
            "aws_lb_listener.l-1",
            "aws_lb_target_group.alb-tg1",
            "aws_security_group.al-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lr2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg2/6bbbc63847ec88bb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener-rule/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3/6ac08701c129248e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/football/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener-rule/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3/6ac08701c129248e",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:listener/app/alb-1/b9f1f855d1bedc65/a3a53c7daf68aac3",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.al-sg",
            "aws_lb.alb-1",
            "aws_lb_listener.l-1",
            "aws_lb_target_group.alb-tg1",
            "aws_lb_target_group.alb-tg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg1/3708884b2781d100",
            "arn_suffix": "targetgroup/alb-tg1/3708884b2781d100",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg1/3708884b2781d100",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-015e7f08cb53238e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg2/6bbbc63847ec88bb",
            "arn_suffix": "targetgroup/alb-tg2/6bbbc63847ec88bb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg2/6bbbc63847ec88bb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-015e7f08cb53238e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg1/3708884b2781d100-20220105120358116200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg1/3708884b2781d100",
            "target_id": "i-053c0dc5494b34cb4"
          },
          "dependencies": [
            "aws_security_group.al-sg",
            "aws_security_group.ec24_sg",
            "aws_instance.albfootball",
            "aws_lb_target_group.alb-tg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg2/6bbbc63847ec88bb-20220105120412922100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:076592739138:targetgroup/alb-tg2/6bbbc63847ec88bb",
            "target_id": "i-07cfd8661f1101d1d"
          },
          "dependencies": [
            "aws_instance.albcricket",
            "aws_lb_target_group.alb-tg2",
            "aws_security_group.al-sg",
            "aws_security_group.ec24_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "al-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076592739138:security-group/sg-0d98626b463e978f8",
            "description": "Allow end user",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d98626b463e978f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any where",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "al-sg",
            "name_prefix": "",
            "owner_id": "076592739138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "al-sg"
            },
            "tags_all": {
              "Name": "al-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-015e7f08cb53238e7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec24_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076592739138:security-group/sg-0ff0bc387ddec9631",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff0bc387ddec9631",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.110.170.86/32"
                ],
                "description": "my vpn ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "alb ip",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d98626b463e978f8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec24_sg",
            "name_prefix": "",
            "owner_id": "076592739138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec24_sg"
            },
            "tags_all": {
              "Name": "ec24_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-015e7f08cb53238e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.al-sg"
          ]
        }
      ]
    }
  ]
}